src/test/ui/consts/const-eval/ub-wide-ptr.32bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:38:37
   |
LL | const STR_TOO_LONG: &str = unsafe { mem::transmute((&42u8, 999usize)) };
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a dangling reference (going beyond the bounds of its allocation)

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:40:53
   |
LL | const NESTED_STR_MUCH_TOO_LONG: (&str,) = (unsafe { mem::transmute((&42, usize::MAX)) },);
   |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered invalid reference metadata: slice is bigger than largest supported object

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:43:39
   |
LL | const STR_LENGTH_PTR: &str = unsafe { mem::transmute((&42u8, &3)) };
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered non-integer slice length in wide pointer

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:46:44
   |
LL | const MY_STR_LENGTH_PTR: &MyStr = unsafe { mem::transmute((&42u8, &3)) };
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered non-integer slice length in wide pointer

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:48:47
   |
LL | const MY_STR_MUCH_TOO_LONG: &MyStr = unsafe { mem::transmute((&42u8, usize::MAX)) };
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered invalid reference metadata: slice is bigger than largest supported object

error[E0080]: it is undefined behavior to use this value
  --> $DIR/ub-wide-ptr.rs:52:1
   |
LL | const STR_NO_INIT: &str = unsafe { mem::transmute::<&[_], _>(&[MaybeUninit::<u8> { uninit: () }]) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed at .<deref>: encountered uninitialized data in `str`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 8, align: 4) {
               ╾─allocN─╼ 01 00 00 00                         │ ╾──╼....
           }

error[E0080]: it is undefined behavior to use this value
  --> $DIR/ub-wide-ptr.rs:55:1
   |
LL | const MYSTR_NO_INIT: &MyStr = unsafe { mem::transmute::<&[_], _>(&[MaybeUninit::<u8> { uninit: () }]) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed at .<deref>.0: encountered uninitialized data in `str`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 8, align: 4) {
               ╾─allocN─╼ 01 00 00 00                         │ ╾──╼....
           }

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:64:5
   |
LL |     mem::transmute((42, uninit_len))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered uninitialized reference

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:68:40
   |
LL | const SLICE_TOO_LONG: &[u8] = unsafe { mem::transmute((&42u8, 999usize)) };
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a dangling reference (going beyond the bounds of its allocation)

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:71:50
   |
LL | const SLICE_TOO_LONG_OVERFLOW: &[u32] = unsafe { mem::transmute((&42u32, isize::MAX)) };
   |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered invalid reference metadata: slice is bigger than largest supported object

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:74:42
   |
LL | const SLICE_LENGTH_PTR: &[u8] = unsafe { mem::transmute((&42u8, &3)) };
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered non-integer slice length in wide pointer

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:77:48
   |
LL | const SLICE_TOO_LONG_BOX: Box<[u8]> = unsafe { mem::transmute((&42u8, 999usize)) };
   |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a dangling box (going beyond the bounds of its allocation)

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:80:50
   |
LL | const SLICE_LENGTH_PTR_BOX: Box<[u8]> = unsafe { mem::transmute((&42u8, &3)) };
   |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered non-integer slice length in wide pointer

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:84:51
   |
LL | const SLICE_CONTENT_INVALID: &[bool] = &[unsafe { mem::transmute(3u8) }];
   |                                                   ^^^^^^^^^^^^^^^^^^^ type validation failed: encountered 0x03, but expected a boolean

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:90:60
   |
LL | const MYSLICE_PREFIX_BAD: &MySliceBool = &MySlice(unsafe { mem::transmute(3u8) }, [false]);
   |                                                            ^^^^^^^^^^^^^^^^^^^ type validation failed: encountered 0x03, but expected a boolean

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:93:67
   |
LL | const MYSLICE_SUFFIX_BAD: &MySliceBool = &MySlice(true, [unsafe { mem::transmute(3u8) }]);
   |                                                                   ^^^^^^^^^^^^^^^^^^^ type validation failed: encountered 0x03, but expected a boolean

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:102:5
   |
LL |     mem::transmute((42, uninit_len))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered uninitialized raw pointer

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:108:58
   |
LL | const TRAIT_OBJ_SHORT_VTABLE_1: W<&dyn Trait> = unsafe { mem::transmute(W((&92u8, &3u8))) };
   |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed at .0: encountered too small vtable

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:111:58
   |
LL | const TRAIT_OBJ_SHORT_VTABLE_2: W<&dyn Trait> = unsafe { mem::transmute(W((&92u8, &3u64))) };
   |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed at .0: encountered too small vtable

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:114:54
   |
LL | const TRAIT_OBJ_INT_VTABLE: W<&dyn Trait> = unsafe { mem::transmute(W((&92u8, 4usize))) };
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed at .0: encountered dangling vtable pointer in wide pointer

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:116:57
   |
LL | const TRAIT_OBJ_UNALIGNED_VTABLE: &dyn Trait = unsafe { mem::transmute((&92u8, &[0u8; 128])) };
   |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered unaligned vtable pointer in wide pointer

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:118:57
   |
LL | const TRAIT_OBJ_BAD_DROP_FN_NULL: &dyn Trait = unsafe { mem::transmute((&92u8, &[0usize; 8])) };
   |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered invalid drop function pointer in vtable (not pointing to a function)

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:120:56
   |
LL | const TRAIT_OBJ_BAD_DROP_FN_INT: &dyn Trait = unsafe { mem::transmute((&92u8, &[1usize; 8])) };
   |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered invalid drop function pointer in vtable (not pointing to a function)

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:123:14
   |
LL |     unsafe { mem::transmute(W((&92u8, &[&42u8; 8]))) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed at .0: encountered invalid drop function pointer in vtable (not pointing to a function)

error[E0080]: it is undefined behavior to use this value
  --> $DIR/ub-wide-ptr.rs:127:1
   |
LL | const TRAIT_OBJ_CONTENT_INVALID: &dyn Trait = unsafe { mem::transmute::<_, &bool>(&3u8) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed at .<deref>.<dyn-downcast>: encountered 0x03, but expected a boolean
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 8, align: 4) {
               ╾allocN─╼ ╾allocN─╼                         │ ╾──╼╾──╼
           }

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:131:62
   |
LL | const RAW_TRAIT_OBJ_VTABLE_NULL: *const dyn Trait = unsafe { mem::transmute((&92u8, 0usize)) };
   |                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered dangling vtable pointer in wide pointer

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-wide-ptr.rs:133:65
   |
LL | const RAW_TRAIT_OBJ_VTABLE_INVALID: *const dyn Trait = unsafe { mem::transmute((&92u8, &3u64)) };
   |                                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered too small vtable

error[E0080]: could not evaluate static initializer
  --> $DIR/ub-wide-ptr.rs:140:5
   |
LL |     mem::transmute::<_, &dyn Trait>((&92u8, 0usize))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered dangling vtable pointer in wide pointer

error[E0080]: could not evaluate static initializer
  --> $DIR/ub-wide-ptr.rs:144:5
   |
LL |     mem::transmute::<_, &dyn Trait>((&92u8, &3u64))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered too small vtable

error: aborting due to 29 previous errors

For more information about this error, try `rustc --explain E0080`.
